# android_touch

./: .gitignore  CMakeLists.txt  README.md
example/: example.py
jni/: Android.mk  Application.mk
jni/src/: HTTPServer.cpp  HTTPServer.h  Logging.cpp  Logging.h  Server.cpp  TouchInput.cpp  TouchInput.h  TouchState.cpp  TouchState.h  main.cpp
libs/arm64-v8a/: android_touch  touch
libs/armeabi/: android_touch  touch
libs/armeabi-v7a/: android_touch  touch
libs/mips/: android_touch
libs/mips64/: android_touch  touch
libs/x86/: android_touch
libs/x86_64/: android_touch  touch
python_api/: README.md  touch.py  touch_test.py
src/: DeviceUtils.cpp  DeviceUtils.h  touch.cpp
src/device/: CharacterDevice.cpp  CharacterDevice.h  CharacterInputDevice.cpp  CharacterInputDevice.h  Device.cpp  Device.h  InputDevice.cpp  InputDevice.h  MultiTouchContact.cpp  MultiTouchContact.h  TouchContact.cpp  TouchContact.h  TouchInputDevice.cpp  TouchInputDevice.h  TouchPoint.cpp  TouchPoint.h
src/utils/: FileUtils.cpp  FileUtils.h
